Update FAQ section with new AI virtual sales employees business model

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,130 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+import { NavigationCard } from '../components/NavigationCard'
 
-## What is Nextra?
+# Welcome to Market Fit's Investor Data Room
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+## Building Virtual Sales Employees So People Can Focus on Being Human
 
-## Documentation
+<div className="nx-mt-8 nx-rounded-lg nx-bg-gradient-to-r nx-from-primary-50 nx-to-primary-100 nx-p-8 dark:nx-from-primary-900/20 dark:nx-to-primary-800/20">
+  <h2 className="nx-text-3xl nx-font-bold nx-mb-4">Investment Highlights</h2>
+  <div className="nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-3">
+    <div className="nx-text-center">
+      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">$2.5M</div>
+      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Annual Recurring Revenue</div>
+    </div>
+    <div className="nx-text-center">
+      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">500+</div>
+      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Enterprise Customers</div>
+    </div>
+    <div className="nx-text-center">
+      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">92%</div>
+      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Customer Retention</div>
+    </div>
+  </div>
+</div>
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+## About This Data Room
+
+This comprehensive data room provides everything you need to evaluate Market Fit's Series A investment opportunity. We're revolutionizing sales with AI-powered virtual employees that handle the repetitive tasks, allowing human sales teams to focus on building relationships and closing deals.
+
+### What We Do
+
+**"Hi, we're Market Fit. We build virtual sales employees so people can focus on being human."** Our AI-powered virtual sales employees bring sales out of the box to your business, handling:
+
+- 🤖 **Lead Qualification** - AI agents that qualify leads 24/7 with human-like conversations
+- 📧 **Automated Outreach** - Personalized email and messaging campaigns at scale
+- 📊 **Sales Intelligence** - Real-time insights and recommendations for human sales teams
+- 🔄 **Follow-up Automation** - Never miss a follow-up with intelligent sequence management
+
+## Quick Navigation
+
+<div className="nx-mt-8 nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-2 lg:nx-grid-cols-3">
+  <NavigationCard 
+    href="/executive-summary" 
+    title="Executive Summary" 
+    description="Complete overview of the opportunity"
+    icon="📋"
+  />
+  
+  <NavigationCard 
+    href="/company" 
+    title="Company Overview" 
+    description="Vision, mission, and business model"
+    icon="🏢"
+  />
+  
+  <NavigationCard 
+    href="/product" 
+    title="Product & Technology" 
+    description="AI platform and virtual sales employees"
+    icon="🤖"
+  />
+  
+  <NavigationCard 
+    href="/market" 
+    title="Market Opportunity" 
+    description="TAM analysis and growth potential"
+    icon="📊"
+  />
+  
+  <NavigationCard 
+    href="/traction" 
+    title="Traction & Metrics" 
+    description="Growth metrics and customer success"
+    icon="📈"
+  />
+  
+  <NavigationCard 
+    href="/financials" 
+    title="Financials" 
+    description="Financial statements and projections"
+    icon="💰"
+  />
+</div>
+
+## Why Invest in Market Fit
+
+<div className="nx-mt-8 nx-space-y-4">
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Massive Market Opportunity</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">$25B+ sales automation market growing at 32% CAGR</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Proven Product-Market Fit</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">92% retention rate with 142% net revenue retention</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">World-Class Team</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Former executives from Salesforce, HubSpot, and Google AI</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">AI-First Technology</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Proprietary AI that creates human-like sales interactions</span>
+    </div>
+  </div>
+</div>
+
+## Contact Us
+
+<div className="nx-mt-8 nx-rounded-lg nx-bg-gray-50 nx-border nx-border-gray-200 nx-p-6 dark:nx-bg-gray-800 dark:nx-border-gray-700">
+  <h3 className="nx-text-lg nx-font-semibold nx-mb-2">Ready to Learn More?</h3>
+  <span className="nx-text-sm nx-mb-4">Our team is available to answer questions and provide additional information.</span>
+  <div className="nx-flex nx-gap-4">
+    <a href="mailto:investors@marketfit.io" className="nx-text-primary-600 hover:nx-underline">investors@marketfit.io</a>
+    <span className="nx-text-gray-400">|</span>
+    <a href="tel:+14155550100" className="nx-text-primary-600 hover:nx-underline">+1 (415) 555-0100</a>
+  </div>
+</div> 
