Update investment highlights section: improve table format and add comprehensive investment reasons based on documentation

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,20 +6,12 @@ import { NavigationCard } from '../components/NavigationCard'
 
 <div className="nx-mt-8 nx-rounded-lg nx-bg-gradient-to-r nx-from-primary-50 nx-to-primary-100 nx-p-8 dark:nx-from-primary-900/20 dark:nx-to-primary-800/20">
   <h2 className="nx-text-3xl nx-font-bold nx-mb-4">Investment Highlights</h2>
-  <div className="nx-grid nx-grid-cols-1 nx-gap-4 md:nx-grid-cols-3">
-    <div className="nx-text-center">
-      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">$2.5M</div>
-      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Annual Recurring Revenue</div>
-    </div>
-    <div className="nx-text-center">
-      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">500+</div>
-      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Enterprise Customers</div>
-    </div>
-    <div className="nx-text-center">
-      <div className="nx-text-4xl nx-font-bold nx-text-primary-600">92%</div>
-      <div className="nx-text-sm nx-text-primary-700 dark:nx-text-primary-400">Customer Retention</div>
-    </div>
-  </div>
+  
+  |**Round Size** | $2.5M Seed Round Target |
+  |---|---|
+  | **Product Highlights** | 3 Pending Patents + Open Source |
+  | **Market Interest** | 200+ Waitlist + 12 LOI |
+  | **Customer Retention** | 92% Retention Rate |
 </div>
 
 ## About This Data Room
@@ -87,8 +79,16 @@ This comprehensive data room provides everything you need to evaluate Market Fit
   <div className="nx-flex nx-items-start nx-gap-3">
     <span className="nx-text-2xl">✅</span>
     <div>
-      <h4 className="nx-font-semibold">Massive Market Opportunity</h4>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">$25B+ sales automation market growing at 32% CAGR</span>
+      <h4 className="nx-font-semibold">Strategic Assets</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">$610K in cloud credits eliminates infrastructure costs for 3-5 years</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Superior Unit Economics</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">28x LTV/CAC with sub-3 month payback period vs 3-5x industry standard</span>
     </div>
   </div>
   
@@ -96,23 +96,47 @@ This comprehensive data room provides everything you need to evaluate Market Fit
     <span className="nx-text-2xl">✅</span>
     <div>
       <h4 className="nx-font-semibold">Proven Product-Market Fit</h4>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">92% retention rate with 142% net revenue retention</span>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">92% retention rate with 135% net revenue retention growing to 172%</span>
     </div>
   </div>
   
   <div className="nx-flex nx-items-start nx-gap-3">
     <span className="nx-text-2xl">✅</span>
     <div>
-      <h4 className="nx-font-semibold">World-Class Team</h4>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Former executives from Salesforce, HubSpot, and Google AI</span>
+      <h4 className="nx-font-semibold">Revolutionary Business Model</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Revenue share creates win-win customer relationships with aligned incentives</span>
     </div>
   </div>
   
   <div className="nx-flex nx-items-start nx-gap-3">
     <span className="nx-text-2xl">✅</span>
     <div>
-      <h4 className="nx-font-semibold">AI-First Technology</h4>
-      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">Proprietary AI that creates human-like sales interactions</span>
+      <h4 className="nx-font-semibold">AI-First Technology Advantage</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">3 pending patents protecting core innovations in autonomous AI sales agents</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Clear Path to Profitability</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">EBITDA positive by Q3 2028 with only $15.5M total funding needed</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Founder-Led & Controlled</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">85% founder ownership ensures aligned incentives and long-term vision</span>
+    </div>
+  </div>
+  
+  <div className="nx-flex nx-items-start nx-gap-3">
+    <span className="nx-text-2xl">✅</span>
+    <div>
+      <h4 className="nx-font-semibold">Massive Market Opportunity</h4>
+      <span className="nx-text-sm nx-text-gray-600 dark:nx-text-gray-400">$50B TAM in sales automation growing at 32% CAGR with early market entry</span>
     </div>
   </div>
 </div>
